# re-pe-acquisition

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
asset_classes/: hospitality.md  industrial.md  infrastructure.md  multifamily.md  office.md  retail.md
examples/: example-bess.yaml  example-dc-colo.yaml  example-dc-wholesale.yaml  example-hotel.yaml  example-industrial.yaml  example-office.yaml  example-retail.yaml  example-solar-ppa.yaml  example-str-compset.csv  example-wind.yaml  lattice-extracted.yaml  marina-apartments.yaml  marina-multitier.yaml  newmark-sf-3pack.yaml
scripts/: __init__.py
scripts/market_data/: __init__.py  str_manual.py
scripts/underwriting/: __init__.py  __main__.py  cli.py  debt_sizing.py  excel_summary.py  excel_writer.py  extract.py  ic_memo.py  ic_memo_html.py  metrics.py  models.py  om_extractor.py  pro_forma.py  sensitivity.py  waterfall_acq.py  waterfall_multi.py
scripts/underwriting/commercial/: __init__.py  cli.py  excel_writer.py  lease_cf.py  models.py  pro_forma.py  waterfall.py
scripts/underwriting/datacenter/: __init__.py  cli.py  colo_pro_forma.py  excel_writer.py  models.py  negotiation.py  waterfall.py  wholesale_pro_forma.py
scripts/underwriting/hospitality/: __init__.py  cli.py  excel_writer.py  models.py  pro_forma.py  waterfall.py
scripts/underwriting/infrastructure/: __init__.py  cli.py  excel_writer.py  models.py  pro_forma.py  waterfall.py
tests/: conftest.py  test_debt_sizing.py  test_engines_e2e.py  test_metrics.py  test_models.py  test_om_extractor.py  test_str_manual.py  test_waterfall_multi.py
workflows/: 01-sourcing-screening.md  02-market-analysis.md  03-comps.md  04-underwriting.md  05-ic-memo.md  06-due-diligence.md  07-loi-psa.md  08-close-handoff.md
